Update OpenAPI Spec Version, Add Tool Controller
